--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Emily Oh</title>
+    <link rel="stylesheet" href="style.css"> <!-- 외부 CSS 파일 연동 -->
+</head>
+<body>
+    <!-- 헤더 -->
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="logo.png" alt="My Logo"> <!-- 로고 이미지 경로 확인 -->
+            </div>
+            <ul>
+                <!-- 각 페이지로 이동하는 링크 설정 -->
+                <li><a href="about.html">About</a></li>        <!-- About 페이지로 이동 -->
+                <li><a href="lookbook.html">Lookbook</a></li>  <!-- Lookbook 페이지로 이동 -->
+                <li><a href="shopping.html">Shopping</a></li>  <!-- Shopping 페이지로 이동 -->
+                <li><a href="#">Q&A</a></li>                  <!-- Q&A는 추후 추가 -->
+            </ul>
+        </nav>
+    </header>
+
+    <!-- 메인 섹션 -->
+    <main>
+        <section class="hero">
+            <h1>Welcome to Emily Oh</h1>
+            <p>We are nerdy but classic and fancy.</p>
+            <a href="about.html" class="cta-button">시작하기</a> <!-- 회사 소개 페이지로 이동 -->
+        </section>
+
+        <section class="content">
+            <h2>About Emily Oh</h2>
+            <p>Emily Oh는 10대부터 30대 여성들의 스타일을 책임집니다.</p>
+        </section>
+
+        <!-- 갤러리 섹션 -->
+        <section class="gallery">
+            <h2>사진 갤러리</h2>
+            <div class="gallery-item">
+                <img src="image1.PNG" alt="이미지 1">
+                <img src="image2.PNG" alt="이미지 2">
+                <img src="image3.PNG" alt="이미지 3">
+            </div>
+        </section>
+    </main>
+
+    <!-- 푸터 -->
+    <footer>
+        <p>&copy; 2024 나의 홈페이지. 모든 권리 보유.</p>
+    </footer>
+</body>
+</html>
 
